--- a/css/my.css
+++ b/css/my.css
@@ -45,9 +45,7 @@ h2{
 }
 .container{
     background: #efefef;
-    margin-left: 20px;
-    margin-right: 20px;
-}
+    margin:auto:
 .container p{
     padding: 10px;
 }
